# etsii_virtualizacion

./: CMakeLists.txt
cmake/Modules/: FindTesseract.cmake
include/: etsii_test.h  etsiitestsuite.cpp  etsiitestsuite.h  fpsinfo.h  frameextractor.h  lagdetector.h  laginfo.h  roi.h  textextractor.h  video_utils.h  videofpsmeasurer.h
src/: frameextractor.cpp  lagdetector.cpp  lagdetector.h  main.cpp  textextractor.cpp  video_utils.cpp  videofpsmeasurer.cpp
video_analyzer/: CMakeLists.txt
